# robotics_school

./: Dockerfile  LICENSE  README.md
gazebo_simulations/: CMakeLists.txt  package.xml
gazebo_simulations/launch/: start_differential_model_launch.launch  start_differential_model_launch_joy.launch  start_differential_model_launch_move_base.launch  start_differential_model_launch_rl.launch  start_differential_model_launch_rqt_steering.launch  start_double_pendulum_launch.launch  start_double_pendulum_launch_joy.launch  start_double_pendulum_launch_rl.launch  start_pendulum_launch.launch  start_pendulum_model_launch_rl.launch
gazebo_simulations/models/sdf/DoublePendulum/: model.config  model.sdf
gazebo_simulations/models/sdf/Pendulum/: model.config  model.sdf
gazebo_simulations/models/urdf/: const.xacro  joints.xacro  links.xacro
gazebo_simulations/models/urdf/diff_model/: diff_model.xacro  diff_model_real_sense.xacro  wheel.xacro
gazebo_simulations/world/: differential_model_rl_world.world  double_pendulum_world.world  pendulum_world.world
joy_gazebo_controllers/: CMakeLists.txt  package.xml
joy_gazebo_controllers/src/: differential_drive_model.py  pendulum_joy_controller.py
joy_gazebo_controllers/src/from_joy_msg/: cmd_vel_from_joy_msg.py  ifrom_joy_msg.py  pendulum_force_from_joy_msg.py
joy_gazebo_controllers/src/joy_controller/: model_joy_controller.py
models_configs/: CMakeLists.txt  package.xml
models_configs/cfg/: diff_drive.yaml  local_costmap_params.yaml  map_server_config.yaml  navigation_stack.yaml
navigation/: CMakeLists.txt  package.xml
navigation/launch/: start_navigation_launch.launch
reinforcement_learning_steering/: CMakeLists.txt  package.xml
reinforcement_learning_steering/include/reinforcement_learning_steering/: RLMainWindow.h  Util.h
reinforcement_learning_steering/msg/: RLEpisodeState.msg  RLSimulation.msg
reinforcement_learning_steering/src/: differential_model_rl_logger_node.py  differential_model_rl_node.py  double_pendulum_rl_node.py  pendulum_model_rl_node.py  rl_node.cpp
reinforcement_learning_steering/src/ddpg_implementation/: ddpg_agent.py  model.py
reinforcement_learning_steering/src/rl_environment/: differential_model_environment.py  ireinforcement_learning_environment.py  reinforcement_learning_environment.py
reinforcement_learning_steering/src/rl_plot/: RLMainWindow.cpp  mainwindow.ui  moc_qcustomplot.cpp
reinforcement_learning_steering/src/rl_reward_function/: differential_model_learning_reward.py  double_pendulum_learning_reward.py  ireinforcement_learning_reward_function.py  pendulum_learning_reward.py
reinforcement_learning_steering/src/rl_steering_algorithm/: diff_model_steering_algorithm.py  double_pendulum_steering_algorithm.py  ireinforcement_learning_sterring_algorithm.py  pendulum_steering_algorithm.py
simulation_plugins/: CMakeLists.txt  package.xml
simulation_plugins/include/gazebo_plugins/: DoublePendulumPlugin.h
simulation_plugins/scripts/: plugin_manager.py  update_plugins.py
simulation_plugins/src/: DoublePendulumPlugin.cpp
simulations_messages/: CMakeLists.txt  package.xml
simulations_messages/msg/common/: Pose.msg
simulations_messages/msg/double_pendulum/: CartState.msg  DoublePendulumStates.msg  FirstPole.msg
simulations_messages/msg/manipulator/: JointsStates.msg  ManipulatorStates.msg
