<?xml version="1.0"?>
<package format="2">
  <name>gazebo_simulations</name>
  <version>0.1.0</version>
  <description>The gazebo_simulations package</description>
  <maintainer email="mcichock@student.agh.edu.pl">Marcin Cichocki</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazbo_ros</exec_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models/sdf/"/>
    <gazebo_ros plugin_path="${prefix}/plugins"/>
  </export>
</package>
