<?xml version="1.0"?>
<package format="2">
  <name>joy_gazebo_controllers</name>
  <version>0.1.0</version>
  <description>The joy_controllers package</description>

  <maintainer email="mcichock@student.agh.edu.pl">
    Marcin Cichocki
  </maintainer>

  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>simulations_messages</depend>
  <depend>rospy</depend>
  <depend>joy</depend>


</package>
