<?xml version="1.0"?>
<package format="2">
  <name>models_configs</name>
  <version>0.1.0</version>
  <description>The models_configs package</description>
  <maintainer email="mcichock@student.agh.edu.pl">Marcin Cichocki</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
