<?xml version="1.0"?>
<package format="2">
  <name>simulation_plugins</name>
  <version>0.1.0</version>
  <description>The gazebo_plugins package</description>
  <maintainer email="mcichock@student.agh.edu.pl">MarcinCichocki</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
  <depend>simulations_messages</depend>
</package>
