<?xml version="1.0"?>
<package format="2">
  <name>simulations_messages</name>
  <version>0.1.0</version>
  <description>The simulation_messages package</description>
  <maintainer email="mcichock@student.agh.edu.pl">Marcin Cichocki</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
